--- a/Day-9/ChatApp/socket/package.json
+++ b/Day-9/ChatApp/socket/package.json
@@ -1,6 +1,19 @@
 {
   "dependencies": {
     "express": "^4.21.2",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
-  }
+  },
+  "name": "socket",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module"
 }
