--- a/Day-9/ChatApp/front-end/package.json
+++ b/Day-9/ChatApp/front-end/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^3.17.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,6 +15,8 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "bootstrap": "^5.3.6",
+    "framer-motion": "^12.10.5",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
